DOM，音合成，レスポンス悪い 画像まだ

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script language="javascript" type="text/javascript" src="jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" src="jsdeferred.js"></script>
     <script language="javascript" type="text/javascript" src="html909.js"></script>
+    <script language="javascript" type="text/javascript" src="base64.js"></script>
+    <script language="javascript" type="text/javascript" src="beep.js"></script>
     <script language="javascript" type="text/javascript" src="dance.js"></script>
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="text.css" />
@@ -14,9 +16,7 @@
   </head>
   <body>
     <div class="container_12">
-      <div>
-        <canvas width="600" height="600">
-        </canvas>
+      <div id="stage">
       </div>
       <div>
         <input type="range" min="-240.0" max="240.0" id="speed" step="5" value="130">
