クリックで音増えるとか

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <div>
         <input type="range" min="-240.0" max="240.0" id="speed" step="5" value="130">
       </div>
+      <div>
+        <button id="add-a">+A</button>
+        <button id="add-b">+B</button>
+        <button id="add-c">+C</button>
+        <button id="add-d">+D</button>
+      </div>
       <div id="control">
       </div>
     </div>
