マウスくるくる回すとテンポ変わる

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>dance</title>
     <script language="javascript" type="text/javascript" src="jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" src="jsdeferred.js"></script>
+    <script language="javascript" type="text/javascript" src="jquery.ba-throttle-debounce.min.js"></script>
     <script language="javascript" type="text/javascript" src="html909.js"></script>
     <script language="javascript" type="text/javascript" src="base64.js"></script>
     <script language="javascript" type="text/javascript" src="beep.js"></script>
@@ -19,7 +20,7 @@
       <div id="stage">
       </div>
       <div>
-        <input type="range" min="-240.0" max="240.0" id="speed" step="5" value="130">
+        <input type="range" min="-360.0" max="360.0" id="speed" step="1" value="120">
       </div>
       <div>
         <button id="add-a">+A</button>
