--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <script language="javascript" type="text/javascript" src="dance.js"></script>
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="text.css" />
-    <link rel="stylesheet" type="text/css" href="960.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="960.css" /> -->
     <link rel="stylesheet" type="text/css" href="dance.css" />
   </head>
   <body>
-    <div class="container_12">
-      <div id="stage">
-      </div>
+    <div id="stage">
     </div>
   </body>
 </html>
