--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   </head>
   <body>
     <div id="stage">
+      <img id="center" src="ossan2.png">
+      <img id="bg" src="mandara.jpg">
     </div>
   </body>
 </html>
