--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       <img id="center" src="ossan2.png">
       <img id="bg" src="mandara.jpg">
     </div>
+    <span id="fps"></span>
   </body>
 </html>
