真ん中にありがたいおっさん配置してみた

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="stage">
-      <img id="center" src="ossan2.png">
+      <img id="center" src="ossan_center.png">
       <img id="bg" src="mandara.jpg">
     </div>
     <span id="fps"></span>
