--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <body>
     <div id="stage">
       <img id="center" src="ossan_center.png">
-      <img id="bg" src="mandara.jpg">
+      <img id="bg-top" src="dance2.gif">
+      <img id="bg-bottom" src="dance2.gif">
     </div>
     <span id="fps"></span>
   </body>
