--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
   </head>
   <body>
     <div id="stage">
-      <img id="center" src="ossan_center.png">
-      <img id="bg-right" src="dance2.gif">
-      <img id="bg-left" src="dance2.gif">
+      <div id="center-items">
+        <div class="center-element center-background">
+          <img src="maru2.svg">
+        </div>
+        <div class="center-element center-main-item">
+          <img src="ossan_center.png">
+        </div>
+        <div class="center-element center-item">
+          <img src="tweet.png" style="width: 128px; height: 128px; margin:111px;">
+        </div>
+        <div class="center-element center-item">
+          <img src="hatena-bookmark.png" style="width: 128px; height: 128px; margin:111px;"/>
+        </div>
+      </div>
+      <!-- <img id="bg-right" src="dance2.gif"> -->
+      <!-- <img id="bg-left" src="dance2.gif"> -->
     </div>
     <span id="fps"></span>
   </body>
