--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>dance</title>
+    <title>bon</title>
     <script language="javascript" type="text/javascript" src="js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/jsdeferred.js"></script>
     <script language="javascript" type="text/javascript" src="js/jquery.ba-throttle-debounce.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/base64.js"></script>
     <script language="javascript" type="text/javascript" src="js/beep.js"></script>
-    <script language="javascript" type="text/javascript" src="js/dance.js"></script>
+    <script language="javascript" type="text/javascript" src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/text.css" />
-    <link rel="stylesheet" type="text/css" href="css/dance.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <div id="stage">
