--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -23,10 +23,19 @@
           <img src="images/ossan_center.png">
         </div>
         <div class="center-element center-item">
-          <img src="images/tweet.png" style="width: 128px; height: 128px; margin:111px;">
+          <a href="http://twitter.com" id="tweet-link" target="_blank">
+            <img src="images/tweet.png" style="width: 128px; height: 128px; margin:111px;">
+          </a>
         </div>
         <div class="center-element center-item">
-          <img src="images/hatena-bookmark.png" style="width: 128px; height: 128px; margin:111px;"/>
+          <a href="http://b.hatena.ne.jp" id="hatena-bookmark-link" target="_blank">
+            <img src="images/hatena-bookmark.png" style="width: 128px; height: 128px; margin:111px;"/>
+          </a>
+        </div>
+        <div class="center-element center-item">
+          <a href="http://teeparty.jp" id="buy-tshirts-link" target="_blank">
+            Tシャツ
+          </a>
         </div>
       </div>
       <!-- <img id="bg-right" src="images/dance2.gif"> -->
