--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -17,10 +17,13 @@
     <div id="stage">
       <div id="center-items">
         <div class="center-element center-background">
-          <img src="images/maru2.svg">
+          <img src="images/back_image.png">
+        </div>
+        <div class="center-element center-background">
+          <img src="images/flower.png">
         </div>
         <div class="center-element center-main-item">
-          <img src="images/ossan_center.png">
+          <img src="images/baby_center.png">
         </div>
         <div class="center-element center-item">
           <a href="http://twitter.com" id="tweet-link" target="_blank">
