--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -19,8 +19,8 @@
         <div class="center-element center-background">
           <img src="images/back_image.png">
         </div>
-        <div class="center-element center-background">
-          <img src="images/flower.png">
+        <div class="center-element center-background hasu">
+          <img src="images/hasu.png">
         </div>
         <div class="center-element center-main-item">
           <img src="images/baby_center.png">
