--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -17,13 +17,13 @@
     <div id="stage">
       <div id="center-items">
         <div class="center-element center-background">
-          <img src="images/back_image.png">
+          <img src="images/back_image_400.png">
         </div>
         <div class="center-element center-background hasu">
-          <img src="images/hasu.png">
+          <img src="images/hasu_400.png">
         </div>
         <div class="center-element center-main-item">
-          <img src="images/baby_center.png">
+          <img src="images/0_center.png">
         </div>
         <div class="center-element center-item">
           <a href="http://twitter.com" id="tweet-link" target="_blank">
