--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -17,10 +17,10 @@
     <div id="stage">
       <div id="center-items">
         <div class="center-element center-background">
-          <img src="images/back_image_400.png">
+          <img src="images/back_image.png">
         </div>
         <div class="center-element center-background hasu">
-          <img src="images/hasu_400.png">
+          <img src="images/hasu.png">
         </div>
         <div class="center-element center-main-item">
           <img src="images/0_center.png">
