画像小さく

--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -27,17 +27,17 @@
         </div>
         <div class="center-element center-item">
           <a href="http://twitter.com" id="tweet-link" target="_blank">
-            <img src="images/tweet.png" style="width: 128px; height: 128px; margin:111px;">
+            <img src="images/tweet.png" style="margin-left:160px; margin-top: 250px;">
           </a>
         </div>
         <div class="center-element center-item">
           <a href="http://b.hatena.ne.jp" id="hatena-bookmark-link" target="_blank">
-            <img src="images/hatena-bookmark.png" style="width: 128px; height: 128px; margin:111px;"/>
+            <img src="images/hatena-bookmark1.png" style="margin-left:160px; margin-top: 250px;"/>
           </a>
         </div>
         <div class="center-element center-item">
           <a href="http://teeparty.jp" id="buy-tshirts-link" target="_blank">
-            Tシャツ
+            <img src="images/buy-tshirts1.png" style="margin-left:160px; margin-top: 250px;"/>
           </a>
         </div>
       </div>
