--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="center-element center-item">
           <a href="http://twitter.com" id="tweet-link" target="_blank">
-            <img src="images/tweet.png" style="margin-left:160px; margin-top: 250px;">
+            <img src="images/tweet1.png" style="margin-left:160px; margin-top: 250px;">
           </a>
         </div>
         <div class="center-element center-item">
