ボタン強化

--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -25,25 +25,21 @@
         <div class="center-element center-main-item">
           <img src="images/0_center.png">
         </div>
-        <div class="center-element center-item">
-          <a href="http://twitter.com" id="tweet-link" target="_blank">
-            <img src="images/tweet1.png" style="margin-left:160px; margin-top: 250px;">
-          </a>
-        </div>
-        <div class="center-element center-item">
-          <a href="http://b.hatena.ne.jp" id="hatena-bookmark-link" target="_blank">
-            <img src="images/hatena-bookmark1.png" style="margin-left:160px; margin-top: 250px;"/>
-          </a>
-        </div>
-        <div class="center-element center-item">
-          <a href="http://teeparty.jp" id="buy-tshirts-link" target="_blank">
-            <img src="images/buy-tshirts1.png" style="margin-left:160px; margin-top: 250px;"/>
-          </a>
-        </div>
+      </div>
+      <div id="buttons">
+        <a href="http://twitter.com" id="tweet-link" target="_blank">
+          <img src="images/tweet1.png">
+        </a>
+        <a href="http://b.hatena.ne.jp" id="hatena-bookmark-link" target="_blank">
+          <img src="images/hatena-bookmark1.png"/>
+        </a>
+        <a href="http://teeparty.jp" id="buy-tshirts-link" target="_blank">
+          <img src="images/buy-tshirts1.png"/>
+        </a>
       </div>
       <!-- <img id="bg-right" src="images/dance2.gif"> -->
       <!-- <img id="bg-left" src="images/dance2.gif"> -->
     </div>
-    <span id="fps"></span>
+    <!-- <span id="fps"></span> -->
   </body>
 </html>
