--- a/public/bon2/index.html
+++ b/public/bon2/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/text.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="canonical" href="http://hitashi-dance-network.appspot.com/bon/"/>
   </head>
   <body>
     <div id="stage">
