--- a/public/kimono/index.html
+++ b/public/kimono/index.html
@@ -21,6 +21,9 @@
         現在位置に設定
       </button>
     </div>
+    <div id="indicator">
+      通信中です
+    </div>
     <div id="result">
       <div>
         <span>日付</span>
