--- a/public/kimono/index.html
+++ b/public/kimono/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>kimono</title>
+
+    <meta name="viewport" content="width=640px, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <script language="javascript" type="text/javascript" defer src="js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
     <script language="javascript" type="text/javascript" defer src="http://api.docodoco.jp/v3/docodoco?key=COrXLcEMzxNvkfi6pcNtYCZGp9SwZshWiinu4RZDfEiewM7rlXIKFRHwVW9kPJxa" charset="utf-8"></script>
     <script language="javascript" type="text/javascript" defer src="js/kimono.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/viewer.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/main.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/text.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+
   </head>
   <body>
     <div id="city-selector-container">
