--- a/public/kimono/index.html
+++ b/public/kimono/index.html
@@ -32,6 +32,10 @@
     </div>
     <div id="result">
       <div>
+        <span>地域</span>
+        <span id="area"></span>
+      </div>
+      <div>
         <span>日付</span>
         <span id="date"></span>
       </div>
