--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -11,7 +11,7 @@
     <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
     <script language="javascript" type="text/javascript" defer src="http://widgets.twimg.com/j/2/widget.js"></script>
     <!-- <script language="javascript" type="text/javascript" defer src="http://api.docodoco.jp/v3/docodoco?key=COrXLcEMzxNvkfi6pcNtYCZGp9SwZshWiinu4RZDfEiewM7rlXIKFRHwVW9kPJxa" charset="utf-8"></script> -->
-    <script language="javascript" type="text/javascript" defer src="js/kimono.js"></script>
+    <script language="javascript" type="text/javascript" defer src="js/weather.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/viewer.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/main.js"></script>
 
