--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -23,7 +23,7 @@
 
   </head>
   <body>
-    <div id="container">
+    <div id="wrapper">
       <h1>天気予報です</h1>
       <div id="city-selector-container">
       </div>
