--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -24,48 +24,125 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>天気予報です</h1>
-      <div id="city-selector-container">
+
+      <h1>重ね着</h1>
+      <hr></hr>
+      <div class="page" id="weather-page">
+        <h2>重ね着</h2>
+        <div id="city-selector-container">
+        </div>
+        <div id="reset-city-container">
+          <button id="reset-city">
+            現在位置に設定
+          </button>
+        </div>
+        <div id="indicator">
+          通信中です
+        </div>
+        <div id="result">
+          <div>
+            <span>地域</span>
+            <span id="area"></span>
+          </div>
+          <div>
+            <span>日付</span>
+            <span id="date"></span>
+          </div>
+          <div>
+            <span>天気</span>
+            <span id="description"></span>
+          </div>
+          <div>
+            <span>最高気温</span>
+            <span id="max-temp"></span>
+          </div>
+          <div>
+            <span>最低気温</span>
+            <span id="min-temp"></span>
+          </div>
+        </div>
+        <h2>画像</h2>
+        <div>
+          <img src="images/a.jpg" style="width: 320px; height:240px;"/>
+        </div>
       </div>
-      <div id="reset-city-container">
-        <button id="reset-city">
-          現在位置に設定
+
+      <div class="page" id="share-page">
+        <h2>共有</h2>
+        <div>
+          <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD">重ね着をツイートする</a>
+        </div>
+        <div id="widget-container">
+        </div>
+      </div>
+
+      <div class="page" id="guide-page">
+        <h2>ガイドページ</h2>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+        <p>
+          あああああああああああああああああああああああ
+        </p>
+      </div>
+
+      <hr></hr>
+
+      <div id="page-changer-container">
+        <button class="page-changer" data-target-id="weather-page">
+          天気予報
         </button>
-      </div>
-      <div id="indicator">
-        通信中です
-      </div>
-      <div id="result">
-        <div>
-          <span>地域</span>
-          <span id="area"></span>
-        </div>
-        <div>
-          <span>日付</span>
-          <span id="date"></span>
-        </div>
-        <div>
-          <span>天気</span>
-          <span id="description"></span>
-        </div>
-        <div>
-          <span>最高気温</span>
-          <span id="max-temp"></span>
-        </div>
-        <div>
-          <span>最低気温</span>
-          <span id="min-temp"></span>
-        </div>
-      </div>
-      <h2>画像テスト</h2>
-      <div>
-        <img src="images/a.jpg" style="width: 320px; height:240px;"/>
-      </div>
-      <h2>ツイートテスト</h2>
-      <div>
-        <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD">重ね着をツイートする</a>
-      </div>
-      <div id="widget-container">
+        <button class="page-changer" data-target-id="share-page">
+          共有
+        </button>
+        <button class="page-changer" data-target-id="guide-page">
+          ガイド
+        </button>
       </div>
     </div>
   </body>
