1ページにまとめた

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -33,15 +33,11 @@
   </head>
   <body>
     <div id="wrapper">
-      <div id="page-changer-container">
-        <a class="page-changer" id="weather-page-selector" href="#weather-page" title="重ね着"><img src="images/a.jpg"></a><a class="page-changer" id="share-page-selector" href="#share-page" title="共有"><img src="images/a.jpg"></a><a class="page-changer" id="guide-page-selector" href="#guide-page" title="ガイド"><img src="images/a.jpg"></a>
-        <div class="clear">
-        </div>
+      <div id="title">
+        <img src="images/a.jpg">
       </div>
 
-      <hr></hr>
-
-      <div class="page" id="weather-page">
+      <div class="page">
         <div id="city-selector-container">
           <button id="reset-city">
             現在位置に設定
@@ -68,89 +64,58 @@
               <div>
                 <span>最高気温</span>
                 <span id="max-temp"></span>
+                <span>℃</span>
               </div>
-              <img src="images/a.jpg" style="width: 160px; height:240px;"/>
+              <div class="wear-image">
+                <img src="images/a.jpg">
+              </div>
+              <div class="wear-icons">
+                <img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg">
+              </div>
+              <div class="clear">
+              </div>
             </div>
 
             <div class="day">
               <div>
                 <span>最低気温</span>
                 <span id="min-temp"></span>
+                <span>℃</span>
               </div>
-              <img src="images/a.jpg" style="width: 160px; height:240px;"/>
+              <div class="wear-image">
+                <img src="images/a.jpg">
+              </div>
+              <div class="wear-icons">
+                <img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg">
+              </div>
+              <div class="clear">
+              </div>
             </div>
 
             <div class="clear">
             </div>
           </div>
 
+          <div id="comment">
+            マフラーが必要です
+          </div>
+
         </div>
 
-        <div>
+        <div id="share-tweet-container">
           <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD">重ね着をツイートする</a>
         </div>
 
-      </div>
-
-      <div class="page" id="share-page">
-        <h2>共有</h2>
         <div id="widget-container">
         </div>
-      </div>
 
-      <div class="page" id="guide-page">
-        <h2>ガイドページ</h2>
+        <div id="guide">
+        <h2>重ね着について</h2>
         <p>
-          あああああああああああああああああああああああ
+          地域を選ぶと，その日の天気にあった服装をおすすめします．
         </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
-        <p>
-          あああああああああああああああああああああああ
-        </p>
+        </div>
+
       </div>
 
     </div>
