--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -44,7 +44,9 @@
           </button>
         </div>
         <div id="indicator">
-          通信中です
+          <div class="message">
+            お待ちください
+          </div>
         </div>
         <div id="result">
           <div id="area"></div>
@@ -60,7 +62,7 @@
 
           <div id="images">
 
-            <div class="day">
+            <div class="day" id="day-max">
               <div>
                 <span>最高気温</span>
                 <span id="max-temp"></span>
@@ -76,7 +78,7 @@
               </div>
             </div>
 
-            <div class="day">
+            <div class="day" id="day-min">
               <div>
                 <span>最低気温</span>
                 <span id="min-temp"></span>
@@ -100,13 +102,13 @@
             マフラーが必要です
           </div>
 
-        </div>
+          <div id="share-tweet-container">
+            <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD">重ね着をツイートする</a>
+          </div>
 
-        <div id="share-tweet-container">
-          <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD">重ね着をツイートする</a>
-        </div>
+          <div id="widget-container">
+          </div>
 
-        <div id="widget-container">
         </div>
 
         <div id="guide">
