--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -63,7 +63,7 @@
           <div id="images">
 
             <div class="day" id="day-max">
-              <div>
+              <div class="heat">
                 <span>最高気温</span>
                 <span id="max-temp"></span>
                 <span>℃</span>
@@ -79,7 +79,7 @@
             </div>
 
             <div class="day" id="day-min">
-              <div>
+              <div class="heat">
                 <span>最低気温</span>
                 <span id="min-temp"></span>
                 <span>℃</span>
