--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html manifest="kasanegi.manifest">
 <html>
   <head>
     <meta charset="utf-8">
@@ -34,7 +34,7 @@
   <body>
     <div id="wrapper">
       <div id="title">
-        <img src="images/a.jpg">
+        <img src="images/header.png">
       </div>
 
       <div class="page">
@@ -69,10 +69,8 @@
                 <span>℃</span>
               </div>
               <div class="wear-image">
-                <img src="images/a.jpg">
               </div>
               <div class="wear-icons">
-                <img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg">
               </div>
               <div class="clear">
               </div>
@@ -85,10 +83,8 @@
                 <span>℃</span>
               </div>
               <div class="wear-image">
-                <img src="images/a.jpg">
               </div>
               <div class="wear-icons">
-                <img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg"><img src="images/a.jpg">
               </div>
               <div class="clear">
               </div>
