--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -34,10 +34,20 @@
   <body>
     <div id="wrapper">
       <div id="title">
-        <img src="images/day.png" title="重ね着">
+        <img src="images/header.png" title="重ね着">
       </div>
 
       <div class="page">
+
+        <div id="guide">
+          <p>
+            地域を選ぶと，その日の天気にあった服装をおすすめします．
+          </p>
+          <p>
+            重ね着をtwitterで共有することができます．
+          </p>
+        </div>
+
         <div id="city-selector-container">
         </div>
         <div id="indicator">
@@ -48,7 +58,7 @@
         <div id="result">
           <div id="area-container">
             <div id="area-background">
-              <img src="images/night.png"/>
+              <img src="images/area-background.png"/>
             </div>
             <div id="area"></div>
           </div>
@@ -97,7 +107,7 @@
           </div>
 
           <div id="share-tweet-container">
-            <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD"><img src="images/night.png" title="重ね着をツイートする"></a>
+            <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD"><img src="images/tweet.png" title="重ね着をツイートする"></a>
           </div>
 
           <div id="widget-container">
@@ -105,15 +115,7 @@
 
         </div>
 
-        <div id="guide">
-          <h2>重ね着について</h2>
-          <p>
-            地域を選ぶと，その日の天気にあった服装をおすすめします．
-          </p>
-          <p>
-            重ね着をtwitterで共有することができます．
-          </p>
-
+        <div id="guide-api">
           <p>
             重ね着では以下のAPIを利用しています．
           </p>
