--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -145,6 +145,10 @@
 
         </div>
 
+        <div id="copyright">
+          Copyright (C) 2011 higashi dance network. All Rights Reserved.
+        </div>
+
       </div>
 
     </div>
