--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -41,9 +41,8 @@
 
         <div id="guide">
           <p>
-            地域を選ぶと，その日の天気にあった服装をおすすめします．
-          </p>
-          <p>
+            地域を選ぶと，天気にあった服装をおすすめします．
+            <br/>
             重ね着をtwitterで共有することができます．
           </p>
         </div>
