--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -39,14 +39,6 @@
 
       <div class="page">
 
-        <div id="guide">
-          <p>
-            地域を選ぶと，天気にあった服装をおすすめします．
-            <br/>
-            重ね着をtwitterで共有することができます．
-          </p>
-        </div>
-
         <div id="city-selector-container">
         </div>
         <div id="indicator">
@@ -59,10 +51,13 @@
             <div id="area-background">
               <img src="images/area-background.png"/>
             </div>
-            <div id="area"></div>
+            <div id="__area"></div>
           </div>
           <div id="weather-container">
-            <div class="float" id="date"></div>
+            <div class="float" id="area-date-container">
+              <div id="area"></div>
+              <div id="date"></div>
+            </div>
             <div class="float-right">
               <div id="weather-icons"></div>
               <div id="description"></div>
@@ -112,6 +107,14 @@
           <div id="widget-container">
           </div>
 
+        </div>
+
+        <div id="guide">
+          <p>
+            地域を選ぶと，天気にあった服装をおすすめします．
+            <br/>
+            重ね着をtwitterで共有することができます．
+          </p>
         </div>
 
         <div id="guide-api">
