--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -6,6 +6,7 @@
 
     <meta name="viewport" content="width=320px, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no" />
 
     <!-- ↓ 半透明うっとおしい -->
     <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
