--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>重ね着</title>
+    <title>今日の重ね着</title>
 
     <meta name="viewport" content="width=320px, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -16,6 +16,7 @@
 
     <!-- 57x57 -->
     <!-- <link rel="apple-touch-startup-image" href="images/icon.png" /> -->
+
 
     <script language="javascript" type="text/javascript" defer src="js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
@@ -37,7 +38,7 @@
     <div id="wrapper">
       <div id="title-container">
         <div id="title">
-          <img src="images/header.png" title="重ね着">
+          <img src="images/header.png" title="今日の重ね着">
         </div>
         <a href="#main" id="back-to-main">
           <img src="images/back-button.png" title="戻る"/>
