--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -38,7 +38,9 @@
     <div id="wrapper">
       <div id="title-container">
         <div id="title">
-          <img src="images/header.png" title="今日の重ね着">
+          <a href="#main">
+            <img src="images/header.png" title="今日の重ね着">
+          </a>
         </div>
         <a href="#main" id="back-to-main">
           <img src="images/back-button.png" title="戻る"/>
